Add interconnect with external ceph

--- a/roles/deploy_osh/templates/helm_vars_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_common.yaml.j2
@@ -22,8 +22,8 @@ release_group: {{region}}_{{os_release}}
 
 # Parameter for ceph network
 network:
-  public: {{ceph_net}}
-  cluster: {{ceph_net}}
+  public: {{ceph.net}}
+  cluster: {{ceph.net}}
 
 pod:
   #NOTE(portdirect): see https://github.com/openstack/kolla/blob/f62f5ae2fa5e7808722f9b37b48a50b39c20b46d/kolla/common/config.py#L695-L998
