Add routerid parameter to ingress keepalived

--- a/roles/deploy_osh/templates/ingress-kube-system.yaml.j2
+++ b/roles/deploy_osh/templates/ingress-kube-system.yaml.j2
@@ -16,6 +16,7 @@ network:
     mode: keepalived
     interface: {{hostvars[groups['control-plane']|first]['ansible_default_ipv4']['interface']}}
     addr: {{vip_ip}}/32
+    routerid: {{255| ramdom(seed=region)}}
 conf:
   ingress:
     bind-address: 0.0.0.0
