Revert to resolved, fix check gw, change aaa_mode to rbac

--- a/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
@@ -20,7 +20,8 @@ global:
      METADATA_PROXY_SECRET: "{{metadata_secret_key}}"
      LOG_LEVEL: SYS_NOTICE
      CLOUD_ORCHESTRATOR: openstack
-     AAA_MODE: cloud-admin
+#     AAA_MODE: cloud-admin
+     AAA_MODE: rbac
      CONFIG_NODEMGR__DEFAULTS__minimum_diskGB: "5"
      DATABASE_NODEMGR__DEFAULTS__minimum_diskGB: "5"
 #     SVC_MONITOR__DEFAULTS__region_name: {{region}}
