Fix resolve template for systemd-resolved

--- a/roles/prepare-node/templates/resolved.conf.j2
+++ b/roles/prepare-node/templates/resolved.conf.j2
@@ -1,9 +1,9 @@
--[Resolve]
--DNS={{dns_srvs| join(" ")}}
--#FallbackDNS=
--#Domains=
--#LLMNR=no
--#MulticastDNS=no
--DNSSEC=no
--#Cache=yes
--#DNSStubListener=yes
+[Resolve]
+DNS={{dns_srvs| join(" ")}}
+#FallbackDNS=
+#Domains=
+#LLMNR=no
+#MulticastDNS=no
+DNSSEC=no
+#Cache=yes
+#DNSStubListener=yes
