--- a/roles/deploy_osh/templates/fluent-logging.yaml.j2
+++ b/roles/deploy_osh/templates/fluent-logging.yaml.j2
@@ -85,6 +85,26 @@ conf:
         DB.Sync: Normal
         Buffer_Chunk_Size: 1M
         Buffer_Max_Size: 1M
+    - libvirt:
+        header: input
+        Name: tail
+        Tag: libvirt
+        Path: /var/log/libvirt/libvirtd.log
+        DB: /var/log/libvirt.db
+        Mem_Buf_Limit: 5MB
+        DB.Sync: Normal
+        Buffer_Chunk_Size: 1M
+        Buffer_Max_Size: 1M
+    - qemu:
+        header: input
+        Name: tail
+        Tag: qemu
+        Path: /var/log/libvirt/qemu/*.log
+        DB: /var/log/qemu.db
+        Mem_Buf_Limit: 5MB
+        DB.Sync: Normal
+        Buffer_Chunk_Size: 1M
+        Buffer_Max_Size: 1M
     - kubelet:
         header: input
         Name: systemd
@@ -107,6 +127,16 @@ conf:
         DB.Sync: Normal
         Buffer_Chunk_Size: 1M
         Buffer_Max_Size: 1M
+    - libvirt_record_modifier:
+        header: filter
+        Name: record_modifier
+        Match: libvirt
+        Record: hostname ${HOSTNAME}
+    - qemu_record_modifier:
+        header: filter
+        Name: record_modifier
+        Match: qemu
+        Record: hostname ${HOSTNAME}
     - kernel_record_modifier:
         header: filter
         Name: record_modifier
@@ -148,10 +178,10 @@ conf:
         Match: "**.fluentd**"
     - kube_filter:
         header: filter
-        Kube_URL: https://kubernetes.default.svc.{{int_domain_suffix}}
         Name: kubernetes
+        Kube_URL: https://kubernetes.default.svc.{{int_domain_suffix}}
         Match: kube.*
-        Merge_Log: On
+        Merge_JSON_Log: On
     - fluentd_output:
         header: output
         Name: forward
