--- a/roles/deploy_osh/templates/rabbitmq.yaml.j2
+++ b/roles/deploy_osh/templates/rabbitmq.yaml.j2
@@ -35,3 +35,7 @@ conf:
 monitoring:
   prometheus:
     enabled: {{monitoring}}
+
+images:
+  tags:
+    scripted_test: {{images.osh.rabbitmq.repo|default(local_docker_registry+"/"+os_release)}}/{{images.osh.rabbitmq.image}}:{{images.osh.rabbitmq.tag|default(osh_tag)}}
