Add changed after contrail images moved to kolla

--- a/roles/deploy_osh/templates/helm_vars_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_common.yaml.j2
@@ -13,7 +13,7 @@ images:
 {% if params.link is defined %}
 {% set params = images['contrail'][params.link] %}
 {% endif %}
-    {{image}}: {{params.repo|default(local_docker_registry)}}/{{params.image}}:{{params.tag|default(contrail_tag)}}
+    {{image}}: {{params.repo|default(local_docker_registry+"/"+os_release)}}/{{params.image}}:{{params.tag|default(contrail_tag)}}
 {% endif %}
 {% endfor %}
 
