Fix contrail image name in var file Rename Openstack release var name in osh.yaml

--- a/roles/deploy_osh/templates/gnocchi.yaml.j2
+++ b/roles/deploy_osh/templates/gnocchi.yaml.j2
@@ -6,7 +6,7 @@ images:
 {% if params.link is defined %}
 {% set params = images['gnocchi'][params.link] %}
 {% endif %}
-    {{image}}: {{params.repo|default(local_docker_registry+"/"+os_release)}}/{{params.image}}:{{params.tag|default(osh_tag)}}
+    {{image}}: {{params.repo|default(local_docker_registry+"/"+OS_release)}}/{{params.image}}:{{params.tag|default(osh_tag)}}
 {% endfor %}
 
 pod:
