--- a/roles/deploy_osh/templates/helm_vars_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_common.yaml.j2
@@ -5,7 +5,7 @@ images:
 {% if params.link is defined %}
 {% set params = images['osh'][params.link] %}
 {% endif %}
-    {{image}}: {{params.repo|default(local_docker_registry+"/"+os_release)}}/{{params.image}}:{{params.tag|default(osh_tag)}}
+    {{image}}: {{params.repo|default(local_docker_registry+"/"+OS_release)}}/{{params.image}}:{{params.tag|default(osh_tag)}}
 {% endfor %}
 # Contrail image integration
 {% for image, params in images.contrail.iteritems() %}
@@ -13,12 +13,12 @@ images:
 {% if params.link is defined %}
 {% set params = images['contrail'][params.link] %}
 {% endif %}
-    {{image}}: {{params.repo|default(local_docker_registry+"/"+os_release)}}/{{params.image}}:{{params.tag|default(contrail_tag)}}
+    {{image}}: {{params.repo|default(local_docker_registry+"/"+OS_release)}}/{{params.image}}:{{params.tag|default(contrail_tag)}}
 {% endif %}
 {% endfor %}
 
 
-release_group: {{region}}_{{os_release}}
+release_group: {{region}}_{{OS_release}}
 
 # Parameter for ceph network
 network:
