--- a/roles/deploy_osh/templates/nova.yaml.j2
+++ b/roles/deploy_osh/templates/nova.yaml.j2
@@ -111,7 +111,7 @@ conf:
       driver: filter_scheduler
     filter_scheduler:
       available_filters: nova.scheduler.filters.all_filters
-      enabled_filters: RetryFilter, AvailabilityZoneFilter, ComputeFilter, ComputeCapabilitiesFilter, ImagePropertiesFilter, ServerGroupAntiAffinityFilter, ServerGroupAffinityFilter
+      enabled_filters: RetryFilter, AvailabilityZoneFilter, ComputeFilter, ComputeCapabilitiesFilter, ImagePropertiesFilter, ServerGroupAntiAffinityFilter, ServerGroupAffinityFilter, PciPassthroughFilter
     libvirt:
       images_type: rbd
       images_rbd_pool: {{nova.ephimeral_pool_name}}
