Add supplemetary check

--- a/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
@@ -66,9 +66,9 @@ endpoints:
 contrail_env_vrouter_sriov:
   SRIOV: true
   per_compute_info:
-    node_name: k8snode1
-    SRIOV_VF:  10
-    SRIOV_PHYSICAL_INTERFACE: enp129s0f1
+    node_name: node1
+    SRIOV_VF:  0
+    SRIOV_PHYSICAL_INTERFACE: enp2s0f0
     SRIOV_PHYS_NET:  physnet1
 
 manifests:
