--- a/roles/maas/templates/import-boot-resources.sh.j2
+++ b/roles/maas/templates/import-boot-resources.sh.j2
@@ -181,6 +181,13 @@ function configure_tags {
   done
 }
 
+function configure_kernel_param {
+  if [ "${SRIOV}" ];then
+    MAAS_KERNEL_OPTS="$MAAS_KERNEL_OPTS intel_iommu=on"
+  fi
+  check_then_set kernel_opts ${MAAS_KERNEL_OPTS}
+}
+
 KEY=$(maas-region apikey --username=${ADMIN_USERNAME})
 maas login ${ADMIN_USERNAME} ${MAAS_ENDPOINT} $KEY
 
@@ -190,6 +197,7 @@ configure_proxy
 configure_ntp
 configure_dns
 configure_tags
+configure_kernel_param
 
 # make call to import images
 configure_boot_sources
