--- a/roles/deploy_osh/templates/horizon.yaml.j2
+++ b/roles/deploy_osh/templates/horizon.yaml.j2
@@ -324,7 +324,7 @@ conf:
         }
         # Setting this to True, will add a new "Retrieve Password" action on instance,
         # allowing Admin session password retrieval/decryption.
-        #OPENSTACK_ENABLE_PASSWORD_RETRIEVE = False
+        OPENSTACK_ENABLE_PASSWORD_RETRIEVE = True
         # The Launch Instance user experience has been significantly enhanced.
         # You can choose whether to enable the new launch instance experience,
         # the legacy experience, or both. The legacy experience will be removed
