Add bgp peer timer parameters

--- a/roles/edge-router/templates/HOT_edge.yaml.j2
+++ b/roles/edge-router/templates/HOT_edge.yaml.j2
@@ -62,6 +62,10 @@ parameters:
     type: number
   update_max_batch:
     type: number
+  peer_keepalive:
+    type: number
+  peer_holdtime:
+    type: number
 
 resources:
 
