--- a/roles/edge-router/templates/edge_router.env.j2
+++ b/roles/edge-router/templates/edge_router.env.j2
@@ -27,3 +27,5 @@ parameters:
   health_check_delay: {{health_check_delay}}
   health_check_retries: {{health_check_retries}}
   health_check_timeout: {{health_check_timeout}}
+  peer_keepalive: {{peer_keepalive}}
+  peer_holdtime: {{peer_hosdtime}}
