Fix override cinder pool replication size from defaults

--- a/roles/deploy_osh/templates/cinder.yaml.j2
+++ b/roles/deploy_osh/templates/cinder.yaml.j2
@@ -140,6 +140,17 @@ pod:
           cpu: "2000m"
 
 conf:
+  ceph:
+    override:
+    append:
+    monitors: []
+    admin_keyring: null
+    pools:
+      backup:
+        replication: {{replication}}
+      volume:
+        replication: {{replication}}
+
   cinder:
     DEFAULT:
       backup_driver: cinder.backup.drivers.ceph
